# Hoshino-sync

./: .gitignore  CHANGELOG.md  Pipfile  README.md  htlp.html  pyproject.toml  requirements.txt  requirements_origin.txt  run.py  维护随笔.md
docs/: CHANGELOG.md  维护随笔.md
hoshino/: tools.py
hoshino/config_example/: __bot__.py
hoshino/modules/Daily_News/: getPic.py
hoshino/modules/Question/: __init__.py  clan_black_list.py
hoshino/modules/ai_image_gen/: ai_image_gen.py
hoshino/modules/aichat/: README.MD  aichat.py  aichat1.py
hoshino/modules/anticoncurrency/: anti_concurrency.py
hoshino/modules/bilisearchspider/: bilisearchspider.py  readme.md  spider_conifg.json
hoshino/modules/botmanage/: help.py
hoshino/modules/chatgpt/: chatgpt.py
hoshino/modules/check/: check.py  data_source.py
hoshino/modules/edge_gpt/: dege_gpt.py
hoshino/modules/fgoavatarguess/: __init__.py  _data.py  readme.md
hoshino/modules/headimg_generator/: README.md  __init__.py  requirements.txt
hoshino/modules/image-generate/: __init__.py
hoshino/modules/japanese/: __init__.py
hoshino/modules/mhw/: README.md  mhw.py
hoshino/modules/mikan/: mikan.py
hoshino/modules/ngaclanbattlespider/: idx_cache_cn.json  spider_config.json
hoshino/modules/pcrAvatarGuess/: pcrAvatarGuess.py
hoshino/modules/pcrGuessByDesc/: _chara_data.py  pcrGuessByDesc.py
hoshino/modules/pcr_run/: __init__.py
hoshino/modules/pcr_scrimmage/: README.md  pcr_scrimmage.py  role.py  runway_case.py  调试随笔.md
hoshino/modules/pcrjjc/: README.md  __init__.py  account.json  account.json.copy  binds.json  pcrclient.py
hoshino/modules/pcrmiddaymusic/: pcrmiddaymusic.py  pushed_music.json
hoshino/modules/priconne/: _pcr_data.py  competition.py  login_bonus.py
hoshino/modules/reload/: README.md  loop.py
hoshino/modules/setu/: setu.py
(+55 files in other folders)
