[tool.poetry]
name = "hoshino-sync"
version = "1.0.0"
description = "个人自用hoshino魔改, 主要用于同步本地及服务器生产环境"
authors = ["Ayusummer <ayusummer233@qq.com>"]
license = "GPL3.0"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "2.10"
MarkupSafe = "2.0.1"
Werkzeug = "~=1.0.1"
wsproto = "~=0.15.0"
nonebot = {version = "1.8.0", extras = ["scheduler"]}
aiocqhttp = "~=1.4.0"
lxml = "~=4.8.0"
pytz = "~=2019.3"
requests = "~=2.23.0"
sogou_tr_free = "~=0.0.8"
zhconv = "~=1.4.1"
Pillow = "~=9.1.0"
matplotlib = "~=3.2.1"
numpy = "~=1.22.3"
beautifulsoup4 = "~=4.9.0"
pygtrie = "~=2.3.3"
tinydb = "~=4.1.1"
aiohttp = "~=3.6.2"
cloudscraper = "~=1.2.60"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
